--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,32 +1,118 @@
 apply plugin: 'com.android.application'
-
+apply from: '../config/quality/quality.gradle'
 apply plugin: 'kotlin-android'
-
 apply plugin: 'kotlin-android-extensions'
+apply plugin: 'kotlin-kapt'
 
 android {
     compileSdkVersion 28
+    buildToolsVersion '28.0.3'
     defaultConfig {
         applicationId "com.tide.barsaround"
-        minSdkVersion 18
+        minSdkVersion 21
         targetSdkVersion 28
         versionCode 1
         versionName "1.0"
-        testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
+
+        testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
+        vectorDrawables.useSupportLibrary = true
+
+        // Enabling multidex support.
+        multiDexEnabled true
+        buildConfigField "String", "API_ENDPOINT", api_endpoint
+
     }
+
     buildTypes {
+
+        debug {
+            debuggable true
+            applicationIdSuffix ".debug"
+        }
+
+        staging {
+            minifyEnabled true
+            applicationIdSuffix ".staging"
+            proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
+        }
+
         release {
-            minifyEnabled false
+            minifyEnabled true
+            applicationIdSuffix ".release"
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
     }
+
+    compileOptions {
+        sourceCompatibility JavaVersion.VERSION_1_8
+        targetCompatibility JavaVersion.VERSION_1_8
+    }
+
+    androidExtensions {
+        experimental = true
+    }
+}
+
+ext {
+    // External libraries
+    DAGGER_VERSION = '2.14.1'
+    ANDROID_SUPPORT_VERSION = '28.0.0'
+    TIMBER_VERSION = '4.7.0'
+    OKHTTP3_VERSION = '3.5.0'
+    RETROFIT_VERSION = '2.1.0'
+    GLIDE_VERSION = '4.8.0'
+    MULTIDEX_VERSION = '1.0.3'
+    RX_JAVA_VERSION = '2.1.9'
+    RX_ANDROID_VERSION = '2.0.2'
+    ADAPTER_RX_JAVA = '2.3.0'
+    ANDROID_CORE_KTX = "1.0.0"
+    MOSHI_JSON_API = "3.5.0"
+    MOSHI_VERSION = "1.6.0"
 }
 
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
-    implementation"org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
-    implementation 'com.android.support:appcompat-v7:28.0.0'
+
+    // External libraries
+    implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
+    implementation "org.jetbrains.kotlin:kotlin-reflect:$kotlin_version"
+    implementation "io.reactivex.rxjava2:rxandroid:$RX_ANDROID_VERSION"
+    implementation "io.reactivex.rxjava2:rxjava:$RX_JAVA_VERSION"
+    implementation "com.squareup.retrofit2:adapter-rxjava2:$ADAPTER_RX_JAVA"
+
+    //noinspection GradleCompatible
+    implementation 'androidx.appcompat:appcompat:1.0.2'
+    implementation 'com.google.android.material:material:1.0.0'
+    implementation 'androidx.constraintlayout:constraintlayout:2.0.0-alpha2'
+
+    implementation "com.google.dagger:dagger:$DAGGER_VERSION"
+    implementation "com.google.dagger:dagger-android-support:$DAGGER_VERSION"
+    kapt "com.google.dagger:dagger-compiler:$DAGGER_VERSION"
+    implementation "com.jakewharton.timber:timber:$TIMBER_VERSION"
+    implementation "com.squareup.retrofit2:converter-moshi:$RETROFIT_VERSION"
+    implementation "com.squareup.retrofit2:adapter-rxjava:$RETROFIT_VERSION"
+    implementation "com.squareup.okhttp3:okhttp:$OKHTTP3_VERSION"
+    implementation "com.squareup.okhttp3:logging-interceptor:$OKHTTP3_VERSION"
+    implementation "com.github.bumptech.glide:glide:$GLIDE_VERSION"
+    kapt "com.github.bumptech.glide:compiler:$GLIDE_VERSION"
+    annotationProcessor "com.github.bumptech.glide:compiler:$GLIDE_VERSION"
+    implementation "com.github.bumptech.glide:okhttp3-integration:$GLIDE_VERSION@aar"
+    implementation 'com.pawegio.kandroid:kandroid:0.8.7@aar'
+    implementation "androidx.core:core-ktx:$ANDROID_CORE_KTX"
+    implementation 'com.tbuonomo.andrui:viewpagerdotsindicator:2.1.1'
+    implementation "com.squareup.moshi:moshi:$MOSHI_VERSION"
+    kapt "com.squareup.moshi:moshi-kotlin-codegen:$MOSHI_VERSION"
+    implementation "com.squareup.moshi:moshi-adapters:$MOSHI_VERSION"
+    implementation "moe.banana:moshi-jsonapi:$MOSHI_JSON_API"
+    implementation "moe.banana:moshi-jsonapi-retrofit-converter:$MOSHI_JSON_API"
+    implementation "android.arch.lifecycle:extensions:1.1.1"
+    implementation "android.arch.lifecycle:viewmodel:1.1.1"
+
+    // Unit tests
     testImplementation 'junit:junit:4.12'
-    androidTestImplementation 'com.android.support.test:runner:1.0.2'
-    androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
+    testImplementation 'com.nhaarman.mockitokotlin2:mockito-kotlin:2.0.0-RC1'
+
+    // Ui tests
+    androidTestImplementation 'androidx.test:runner:1.1.1'
+    androidTestImplementation 'androidx.test.espresso:espresso-core:3.1.1'
 }
