--- a/app/build.gradle
+++ b/app/build.gradle
@@ -57,6 +57,7 @@ ext {
     // External libraries
     DAGGER_VERSION = '2.14.1'
     ANDROID_SUPPORT_VERSION = '28.0.0'
+    GOOGLE_PLAY_SERVICES = "16.0.0"
     TIMBER_VERSION = '4.7.0'
     OKHTTP3_VERSION = '3.5.0'
     RETROFIT_VERSION = '2.1.0'
@@ -107,6 +108,8 @@ dependencies {
     implementation "moe.banana:moshi-jsonapi-retrofit-converter:$MOSHI_JSON_API"
     implementation "android.arch.lifecycle:extensions:1.1.1"
     implementation "android.arch.lifecycle:viewmodel:1.1.1"
+    implementation "com.google.android.gms:play-services-maps:$GOOGLE_PLAY_SERVICES"
+    implementation "com.google.android.gms:play-services-location:$GOOGLE_PLAY_SERVICES"
 
     // Unit tests
     testImplementation 'junit:junit:4.12'
