--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,6 +2,7 @@
           package="com.tide.barsaround">
 
     <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION"/>
+
     <application
             android:name=".BarsAroundApplication"
             android:allowBackup="true"
@@ -9,7 +10,10 @@
             android:icon="@mipmap/ic_launcher"
             android:roundIcon="@mipmap/ic_launcher_round"
             android:supportsRtl="true"
-            android:theme="@style/AppTheme">
+            android:theme="@style/AppTheme"
+            android:fullBackupContent="false">
+
+        <uses-library android:name="org.apache.http.legacy" android:required="false" />
 
         <meta-data
                 android:name="com.google.android.geo.API_KEY"
