Amended and fixed some unit tests

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -49,6 +49,10 @@ android {
     androidExtensions {
         experimental = true
     }
+
+    testOptions {
+        unitTests.returnDefaultValues = true
+    }
 }
 
 ext {
